--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@web3modal/ethereum": "^2.2.1",
     "@web3modal/react": "^2.2.1",
     "ethers": "^5.7.2",
+    "react-card-flip": "^1.2.0",
     "react-icons": "^4.8.0",
     "wagmi": "^0.12.2"
   }
