--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils/image.js", "src/components/card.jsx", "src/components/playerCard.tsx", "src/components/toast.jsx", "src/components/itemCard.tsx", "src/components/itemCard.tsx", "src/pages/play/index.jsx", "src/pages/mint/index.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/utils/image.js", "src/components/card.jsx", "src/components/playerCard.tsx", "src/components/toast.jsx", "src/components/itemCard.tsx", "src/components/itemCard.tsx", "src/pages/play/index.jsx", "src/pages/mint/index.jsx", "src/pages/marketplace/index.jsx", "src/components/marketplace/marketplace.jsx", "src/components/marketplace/listingCard.jsx"],
   "exclude": ["node_modules"]
 }
