--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@hookform/resolvers": "^3.1.0",
+    "@mui/material": "^5.12.3",
     "@typechain/ethers-v5": "^10.2.0",
+    "@types/react-toastify": "^4.1.0",
     "@web3modal/ethereum": "^2.2.1",
     "@web3modal/react": "^2.2.1",
     "ethers": "^5.7.2",
+    "react-card-flip": "^1.2.0",
     "react-icons": "^4.8.0",
-    "wagmi": "^0.12.2"
+    "wagmi": "^0.12.2",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "typechain": "^8.1.1"
